Set width to prevent layout shifting

--- a/frontend/src/pages/search/search.scss
+++ b/frontend/src/pages/search/search.scss
@@ -27,7 +27,7 @@
 
   &-scene {
     &-image {
-      max-width: 12.44rem;
+      width: 12.44rem;
     }
   }
 
